might have solved the ticker and nav spacing on refreshing issue

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -43,6 +43,17 @@ html {
     font-size: 1rem;
   }
 }
+.tradingview-widget-container__widget {
+  min-height: 30px; /* Set a safe minimum height */
+  margin-bottom: 10px;
+}
+
+.tradingview-widget-container {
+  display: block;
+  width: 100%;
+  position: relative;
+}
+
 .top {
   position: absolute;
   right: 2.5%;
