--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -2,6 +2,18 @@
 @import 'font-sizes';
 @import 'links';
 
+
+.tradingview-widget-container__widget {
+    min-height: 30px;  /* Set a safe minimum height */
+    margin-bottom: 10px;
+}
+
+.tradingview-widget-container {
+    display: block;
+    width: 100%;
+    position: relative;
+  }
+
 .top {
     position: absolute;
     right: 2.5%;
